2007-12-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTextField.m: Move some KVB to NSControl, add binding
	for text colour.
	* Source/NSControl.m: Add some bindings from NSTextField plus
	NSValueBinding. 

2007-12-13 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSBindingHelpers.h,
	* Source/NSKeyValueBinding.m: Rewrote KVB to use separate binding class.
	* Source/NSTextField.m,
	* Source/NSView.m: Use it here.

2007-12-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSNibBindingConnector.m (-establishConnection): Swap
	destination and source.
	* Source/NSKeyValueBinding.m: Started rework.

2007-12-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSKeyValueBinding.m (GSBindingUnbindAll): Return if table
	doesn't exist.

2007-12-11 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSKeyValueBinding.h,
	* Source/GSBindingHelpers.h,
	* Source/NSKeyValueBinding.m: Basic key value binding implementation.
	* Source/GNUmakefile: Add new source file.
	* Source/externs.m: Variables for key binding.
	* Source/NSTextField.m,
	* Source/NSView.m: Class specific key bindings.
	Patch by Chris Farber <chris@chrisfarber.net>.
	
2007-12-10 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSColor.m (-numberOfComponents, -getComponents:): Raise
	exception when called on abstract class. Increase teh values
	returned by real numberOfComponents by one to count in alpha.
	* Source/NSColor.m (+colorWithColorSpace:components:count:): Basic
	implementation. 
	* Source/NSColor.m (-setFill, -setStroke:): Convert to
	NSDeviceRGBColorSpace first.
	* Source/NSColor.m (GSRGBColor-setFill, GSRGBColor-setStroke:):
	Actual implementation.

2007-12-10 Fred Kiefer <FredKiefer@gmx.de>

	* ColorPickers/GSColorSliderCell.h,
	* ColorPickers/GSColorSliderCell.m: New files split off from
	GSStandardColorPicker.h and GSStandardColorPicker.m.
	* ColorPickers/GNUmakefile: Add the new files.
	* ColorPickers/GSStandardColorPicker.h,
	* ColorPickers/GSStandardColorPicker.m: Remove split off code.